rpi5/teslamate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate
  namespace: teslamate
  labels:
    app: teslamate
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: "app writes to log files in container"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teslamate
  template:
    metadata:
      name: teslamate
      labels:
        app: teslamate
    spec:
      containers:
        - name: teslamate
          image: teslamate/teslamate:1.32.0@sha256:8c282ada5c72b7b0cbd316ec7bc010a9214d5943cf1e1b36ab9b7a98f45a5809
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
              protocol: TCP
              name: http
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsUser: 10001
            runAsGroup: 10001
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              memory: 512Mi
      restartPolicy: Always
