rpi5/teslamate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teslamate
  namespace: teslamate
spec:
  selector:
    app: teslamate
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
