rpi5/teslamate/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teslamate
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`teslamate.local`) || Host(`teslamate.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: teslamate
          port: 80
  tls:
    secretName: teslamate-cert-tls
    domains:
      - main: teslamate.local
        sans:
          - teslamate.internal
